更新ppt样式。删除无用内容。

--- a/templates/products/details.html
+++ b/templates/products/details.html
@@ -23,7 +23,7 @@
             </div>
             <div class="product-title">
                 <h1>{{ product.name }}</h1>
-                <span>超强保温升级版， 316不锈钢</span>
+                <span></span>
                 <div class="price">
                     <span>单价</span>
                     {% if start_price == end_price %}
