[BUG FIX] 修复方案车商品删除多次加入后导致的删除弹出多次删除对话框的问题。

--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -157,7 +157,7 @@
             $('.cart-footer span').text(response.length + '个商品');
             $('.product-count').text(response.length);
         });
-        $(document).on('click', '#cart .del-btn', function () {
+        $(document).off().on('click', '#cart .del-btn', function () {
             if (confirm('确认删除此商品?')) {
                 var productId = $(this).attr('productId');
                 $.ajax({
