--- a/templates/products/details.html
+++ b/templates/products/details.html
@@ -76,6 +76,14 @@
                 产品简介
             </div>
             <div class="product-details-content">
+                {{ product.simple_description | safe }}
+            </div>
+        </div>
+        <div class="product-details">
+            <div class="product-details-header">
+                产品详情
+            </div>
+            <div class="product-details-content">
                 {{ product.description | safe }}
             </div>
         </div>
