--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -182,7 +182,9 @@
                     },
                     success: function (data) {
                         console.log(data.file_url)
-                        window.location.href = data.file_url;
+                        refreshCart();
+                        //window.location.href = data.file_url;
+                        window.open(data.file_url);
                     }
                 });
             }
