--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -181,8 +181,9 @@
                         'X-CSRFToken': csrftoken
                     },
                     success: function (data) {
-                        console.log(data.file_url)
-                        window.location.href = data.file_url;
+                        refreshCart();
+                        //window.location.href = data.file_url;
+                        window.open(data.file_url);
                     }
                 });
             }
