--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="pwdlogin">
                         <img id="pwdicon" src="{% static 'gift_platform_site/images/pwd.png' %}">
-                        <input name="password" placeholder="请输入密码"/>
+                        <input name="password" type="password" placeholder="请输入密码"/>
                         <img id="clearicon2" src="{% static 'gift_platform_site/images/clear.png' %}">
                     </div>
                     <div class="loginbtndiv">
