商品简述折行显示支持。

--- a/templates/products/details.html
+++ b/templates/products/details.html
@@ -76,7 +76,7 @@
                 产品简介
             </div>
             <div class="product-details-content">
-                {{ product.simple_description | safe }}
+                {{ product_simple_description | safe }}
             </div>
         </div>
         <div class="product-details">
