方案车改为点击弹出点击关闭。

--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -240,17 +240,9 @@
         })(jQuery);
 
         (function ($) {
-            var cartDisplay = false;
-            $('.cart-wrap').mouseenter(function () {
-                cartDisplay = true;
-                $('.cart-content').show();
+            $('.cart-wrap').click(function() {
+                $('.cart-content').toggle();
             });
-            $('.cart-content').mouseleave(function (e) {
-                if (cartDisplay) {
-                    cartDisplay = false
-                    $(this).hide();
-                }
-            })
         })(jQuery);
 
         initCart();
