--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -190,7 +190,9 @@
                 });
             }
         });
-        $('.product-list').mCustomScrollbar();
+        $('.product-list').mCustomScrollbar({
+            theme: 'dark'
+        });
     };
 
     var refreshCart = function () {
