更新产品简介样式。

--- a/templates/products/details.html
+++ b/templates/products/details.html
@@ -79,11 +79,11 @@
             </div>
         </div>
         <div class="clear"></div>
-        <div class="product-details">
-            <div class="product-details-header">
+        <div class="product-simple-description">
+            <div class="product-simple-description-header">
                 产品简介
             </div>
-            <div class="product-details-content">
+            <div class="product-simple-description-content">
                 {{ product_simple_description | safe }}
             </div>
         </div>
