--- a/templates/products/category_product_list.html
+++ b/templates/products/category_product_list.html
@@ -8,13 +8,13 @@
     <div class="query-area">
         <div class="query-item-wrap">
             <span class="query-name">分类</span>
-            <a class="query-param" href="{% url 'gift_platform_site:root_category_product_list' parent_category_id=root_category.id %}">不限</a>
+            <a style="margin-left: 1em;" class="query-param" href="{% url 'gift_platform_site:root_category_product_list' parent_category_id=root_category.id %}">不限</a>
             {% for category_existed in root_category.category_set.all %}
                 <a class="query-param {% if category_existed.id == category.id %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category_existed.id  %}?price_range=0&in_private=0">{{ category_existed.name }}</a>
             {% endfor %}
         </div>
         <div class="query-item-wrap">
-            <span class="query-name">单价</span>
+            <span class="query-name">供货价</span>
             <a class="query-param {% if price_range == '0' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=0&in_private={{ in_private }}">不限</a>
             <a class="query-param {% if price_range == '1' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=1&in_private={{ in_private }}">0-20</a>
             <a class="query-param {% if price_range == '2' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?price_range=2&in_private={{ in_private }}">20-50</a>
@@ -36,7 +36,7 @@
         {% if has_private_area %}
         <div class="query-item-wrap">
             <span class="query-name">区域</span>
-            <a class="query-param {% if in_private == '0' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=0&price_range={{ price_range }}">不限</a>
+            <a style="margin-left: 1em;" class="query-param {% if in_private == '0' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=0&price_range={{ price_range }}">不限</a>
             <a class="query-param {% if in_private == '2' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=2&price_range={{ price_range }}">公有</a>
             <a class="query-param {% if in_private == '1' %} select {% endif %}" href="{% url 'gift_platform_site:category_product_list' parent_category_id=root_category.id child_category_id=category.id  %}?in_private=1&price_range={{ price_range }}">私有</a>
         </div>
