--- a/templates/products/root_category_product_list.html
+++ b/templates/products/root_category_product_list.html
@@ -1,4 +1,5 @@
 {% extends "share/base_layout_with_search.html" %}
+{% load gift_platform_extras %}
 {% block title %}一点礼品-所有品牌{% endblock %}
 {% block content %}
 <div class="container">
@@ -54,7 +55,8 @@
             <img class="image-cover" src="{{ product.images.first.productimage.url }}" />
             <div class="desc-wrap">
                 <div class="name">{{ product.name }}</div>
-                <div class="price">￥{{ product.productItems.first.price }}</div>
+                <div class="price">￥{{ product.productItems|to_price_output }}</div>
+                <div class="price">供货价：￥{{ product.productItems|to_sell_price_output }}</div>
             </div>
         </div>
         {% endfor %}
