--- a/templates/products/supplier_product_list.html
+++ b/templates/products/supplier_product_list.html
@@ -1,5 +1,6 @@
 {% extends "share/base_layout_with_search.html" %}
 {%  load static %}
+{% load gift_platform_extras %}
 {% block title %}一点礼品-{{ supplier.suppliername }}{% endblock %}
 {% block content %}
     <div class="container">
@@ -60,7 +61,8 @@
                                     <a href="{% url "gift_platform_site:product_details" product_id=product.id %}"><img class="image-cover" src="{{ product.images.first.productimage.url }}" /></a>
                                     <div class="desc-wrap">
                                         <div class="name"><a href="{% url "gift_platform_site:product_details" product_id=product.id %}">{{ product.name }}</a></div>
-                                        <div class="price">￥{{ product.productItems.first.price }}</div>
+                                        <div class="price">￥{{ product.productItems|to_price_output }}</div>
+                                        <div class="price">供货价：￥{{ product.productItems|to_sell_price_output }}</div>
                                     </div>
                                 </div>
                             {% endif %}
