--- a/templates/products/one_send_product_list.html
+++ b/templates/products/one_send_product_list.html
@@ -55,7 +55,7 @@
             <a href="{% url "gift_platform_site:product_details" product_id=product.id %}"><img class="image-cover" src="{{ product.images.first.productimage.url }}" /></a>
             <div class="desc-wrap">
                 <a href="{% url "gift_platform_site:product_details" product_id=product.id %}"><div class="name">{{ product.name }}</div></a>
-                <div class="price">￥{{ product.productItems|to_price_output }}</div>
+                <div class="price">市场价：￥{{ product.productItems|to_price_output }}</div>
                 <div class="price">供货价：￥{{ product.productItems|to_sell_price_output }}</div>
             </div>
         </div>
