--- a/templates/products/root_category_product_list.html
+++ b/templates/products/root_category_product_list.html
@@ -55,7 +55,7 @@
             <img class="image-cover" src="{{ product.images.first.productimage.url }}" />
             <div class="desc-wrap">
                 <div class="name">{{ product.name }}</div>
-                <div class="price">￥{{ product.productItems|to_price_output }}</div>
+                <div class="price">市场价：￥{{ product.productItems|to_price_output }}</div>
                 <div class="price">供货价：￥{{ product.productItems|to_sell_price_output }}</div>
             </div>
         </div>
