--- a/templates/products/one_send_product_list.html
+++ b/templates/products/one_send_product_list.html
@@ -21,7 +21,10 @@
             <a class="query-param {% if price_range == '2' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=2&in_private={{ in_private }}">20-50</a>
             <a class="query-param {% if price_range == '3' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=3&in_private={{ in_private }}">50-100</a>
             <a class="query-param {% if price_range == '4' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=4&in_private={{ in_private }}">100-200</a>
-            <a class="query-param {% if price_range == '5' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=5&in_private={{ in_private }}">200以上</a>
+            <a class="query-param {% if price_range == '5' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=5&in_private={{ in_private }}">200-500</a>
+            <a class="query-param {% if price_range == '6' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=6&in_private={{ in_private }}">500-1000</a>
+            <a class="query-param {% if price_range == '7' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=7&in_private={{ in_private }}">1000-5000</a>
+            <a class="query-param {% if price_range == '8' %} select {% endif %}" href="{% url 'gift_platform_site:one_send_products' %}?category={{ category.id }}&price_range=8&in_private={{ in_private }}">5000以上</a>
         </div>
         <!--
         <div class="query-item-wrap">
