--- a/templates/sign/register1.html
+++ b/templates/sign/register1.html
@@ -53,7 +53,7 @@
             <a href="#">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">帮助中心</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
         </div>
         <div>
-            <p>一点公司版权所有 © 1997-2018   食品经营许可证：JY133****0111719</p>
+            <p>一点公司版权所有 © 1997-2018   沪ICP备 18016054号-1</p>
         </div>
     </div>
 </div>
